--- a/staticemail.html
+++ b/staticemail.html
@@ -82,7 +82,7 @@ $.get('https://www.cloudflare.com/cdn-cgi/trace', function(data) {
 
     <fieldset class="pure-group">
       <label for="color">Favourite Color: </label>
-      <input id="color" name="color" placeholder="greenzx" />
+      <input id="colorzz" name="color" placeholder="greenzx" />
     </fieldset>
 
     <button class="button-success pure-button button-xlarge">
