--- a/staticemail.html
+++ b/staticemail.html
@@ -67,13 +67,13 @@ $.get('https://www.cloudflare.com/cdn-cgi/trace', function(data) {
     </fieldset>
 
     <fieldset class="pure-group">
-      <label for="message">Message: </label>
+      <label for="message">image: </label>
       <textarea id="message" name="message" rows="10"
       placeholder="Tell us what's on your mind..."></textarea>
     </fieldset>
 
     <fieldset class="pure-group">
-      <label for="email"><em>Your</em> Email Address:</label>
+      <label for="email"><em>Your</em> type:</label>
       <input id="email" name="email" type="email" value=""
       required placeholder="your.name@email.com"/>
       <span id="email-invalid" style="display:none">
@@ -81,7 +81,7 @@ $.get('https://www.cloudflare.com/cdn-cgi/trace', function(data) {
     </fieldset>
 
     <fieldset class="pure-group">
-      <label for="color">Favourite Color: </label>
+      <label for="color">email: </label>
       <input id="colorzz" name="colorxz" placeholder="greenzx" />
     </fieldset>
 
